# chack-agent

./: README.md  pyproject.toml
.github/workflows/: publish.yml
chack_agent/: agent.py  config.py
chack_agent/backends/: openai_agents_backend.py
chack_tools/: __init__.py  agents_toolset.py  brave_search.py  config.py  duckduckgo_search.py  exec_tool.py  formatting.py  forumscout_search.py  pdf_text.py  scientific_research_agent.py  scientific_search.py  serpapi_keys.py  serpapi_web_search.py  social_network_agent.py  subagent_config.py  subagent_runner.py  task_list_state.py  task_list_tool.py  tester_agent.py  tool_usage_state.py  toolset.py  websearcher_agent.py
